bug popup
popup invisible à l'entrée du site

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -104,7 +104,6 @@ body {
 }
 
 #popup-bienvenue {
-  opacity: 0;
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
   background: rgba(0, 0, 0, 0.43);
